output/LuminaParser.py
# Generated from Lumina.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuminaParser ( Parser ):

    grammarFileName = "Lumina.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'string'", "'if'", 
                     "'else'", "'while'", "'do'", "'for'", "'printf'", "'scanf'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'>='", "'<'", "'<='", "'=='", 
                     "'!='", "'&&'", "'||'", "'='", "'('", "')'", "'{'", 
                     "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", 
                      "IF", "ELSE", "WHILE", "DO", "FOR", "PRINTF", "SCANF", 
                      "NUMBER", "ID", "STRING", "PLUS", "MINUS", "MULT", 
                      "DIV", "GT", "GE", "LT", "LE", "EQ", "NEQ", "AND", 
                      "OR", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMI", "COMMA", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_assign = 2
    RULE_expr = 3
    RULE_orExpr = 4
    RULE_andExpr = 5
    RULE_eqExpr = 6
    RULE_relExpr = 7
    RULE_somaExpr = 8
    RULE_termo = 9
    RULE_fator = 10
    RULE_decl = 11
    RULE_tipo = 12
    RULE_ifStat = 13
    RULE_whileStat = 14
    RULE_forStat = 15
    RULE_block = 16
    RULE_printStat = 17
    RULE_readStat = 18

    ruleNames =  [ "prog", "stat", "assign", "expr", "orExpr", "andExpr", 
                   "eqExpr", "relExpr", "somaExpr", "termo", "fator", "decl", 
                   "tipo", "ifStat", "whileStat", "forStat", "block", "printStat", 
                   "readStat" ]

    EOF = Token.EOF
    INT_TYPE=1
    FLOAT_TYPE=2
    STRING_TYPE=3
    IF=4
    ELSE=5
    WHILE=6
    DO=7
    FOR=8
    PRINTF=9
    SCANF=10
    NUMBER=11
    ID=12
    STRING=13
    PLUS=14
    MINUS=15
    MULT=16
    DIV=17
    GT=18
    GE=19
    LT=20
    LE=21
    EQ=22
    NEQ=23
    AND=24
    OR=25
    ASSIGN=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    SEMI=31
    COMMA=32
    WS=33
    LINE_COMMENT=34
    BLOCK_COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuminaParser.StatContext,i)


        def getRuleIndex(self):
            return LuminaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = LuminaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.stat()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 536876894) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(LuminaParser.AssignContext,0)


        def decl(self):
            return self.getTypedRuleContext(LuminaParser.DeclContext,0)


        def ifStat(self):
            return self.getTypedRuleContext(LuminaParser.IfStatContext,0)


        def whileStat(self):
            return self.getTypedRuleContext(LuminaParser.WhileStatContext,0)


        def forStat(self):
            return self.getTypedRuleContext(LuminaParser.ForStatContext,0)


        def printStat(self):
            return self.getTypedRuleContext(LuminaParser.PrintStatContext,0)


        def readStat(self):
            return self.getTypedRuleContext(LuminaParser.ReadStatContext,0)


        def block(self):
            return self.getTypedRuleContext(LuminaParser.BlockContext,0)


        def getRuleIndex(self):
            return LuminaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = LuminaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.assign()
                pass
            elif token in [1, 2, 3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.decl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.ifStat()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.whileStat()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 47
                self.forStat()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 48
                self.printStat()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 49
                self.readStat()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 8)
                self.state = 50
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LuminaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(LuminaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(LuminaParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(LuminaParser.SEMI, 0)

        def getRuleIndex(self):
            return LuminaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = LuminaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(LuminaParser.ID)
            self.state = 54
            self.match(LuminaParser.ASSIGN)
            self.state = 55
            self.expr()
            self.state = 56
            self.match(LuminaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(LuminaParser.OrExprContext,0)


        def getRuleIndex(self):
            return LuminaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = LuminaParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.AndExprContext)
            else:
                return self.getTypedRuleContext(LuminaParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.OR)
            else:
                return self.getToken(LuminaParser.OR, i)

        def getRuleIndex(self):
            return LuminaParser.RULE_orExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrExpr" ):
                listener.enterOrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrExpr" ):
                listener.exitOrExpr(self)




    def orExpr(self):

        localctx = LuminaParser.OrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_orExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.andExpr()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 61
                self.match(LuminaParser.OR)
                self.state = 62
                self.andExpr()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eqExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.EqExprContext)
            else:
                return self.getTypedRuleContext(LuminaParser.EqExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.AND)
            else:
                return self.getToken(LuminaParser.AND, i)

        def getRuleIndex(self):
            return LuminaParser.RULE_andExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)




    def andExpr(self):

        localctx = LuminaParser.AndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_andExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.eqExpr()
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 69
                self.match(LuminaParser.AND)
                self.state = 70
                self.eqExpr()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.RelExprContext)
            else:
                return self.getTypedRuleContext(LuminaParser.RelExprContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.EQ)
            else:
                return self.getToken(LuminaParser.EQ, i)

        def NEQ(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.NEQ)
            else:
                return self.getToken(LuminaParser.NEQ, i)

        def getRuleIndex(self):
            return LuminaParser.RULE_eqExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqExpr" ):
                listener.enterEqExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqExpr" ):
                listener.exitEqExpr(self)




    def eqExpr(self):

        localctx = LuminaParser.EqExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eqExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.relExpr()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22 or _la==23:
                self.state = 77
                _la = self._input.LA(1)
                if not(_la==22 or _la==23):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 78
                self.relExpr()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def somaExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.SomaExprContext)
            else:
                return self.getTypedRuleContext(LuminaParser.SomaExprContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.LT)
            else:
                return self.getToken(LuminaParser.LT, i)

        def LE(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.LE)
            else:
                return self.getToken(LuminaParser.LE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.GT)
            else:
                return self.getToken(LuminaParser.GT, i)

        def GE(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.GE)
            else:
                return self.getToken(LuminaParser.GE, i)

        def getRuleIndex(self):
            return LuminaParser.RULE_relExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelExpr" ):
                listener.enterRelExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelExpr" ):
                listener.exitRelExpr(self)




    def relExpr(self):

        localctx = LuminaParser.RelExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_relExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.somaExpr()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0):
                self.state = 85
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 86
                self.somaExpr()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SomaExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.TermoContext)
            else:
                return self.getTypedRuleContext(LuminaParser.TermoContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.PLUS)
            else:
                return self.getToken(LuminaParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.MINUS)
            else:
                return self.getToken(LuminaParser.MINUS, i)

        def getRuleIndex(self):
            return LuminaParser.RULE_somaExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSomaExpr" ):
                listener.enterSomaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSomaExpr" ):
                listener.exitSomaExpr(self)




    def somaExpr(self):

        localctx = LuminaParser.SomaExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_somaExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.termo()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14 or _la==15:
                self.state = 93
                _la = self._input.LA(1)
                if not(_la==14 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 94
                self.termo()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.FatorContext)
            else:
                return self.getTypedRuleContext(LuminaParser.FatorContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.MULT)
            else:
                return self.getToken(LuminaParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(LuminaParser.DIV)
            else:
                return self.getToken(LuminaParser.DIV, i)

        def getRuleIndex(self):
            return LuminaParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)




    def termo(self):

        localctx = LuminaParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.fator()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==17:
                self.state = 101
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 102
                self.fator()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(LuminaParser.NUMBER, 0)

        def ID(self):
            return self.getToken(LuminaParser.ID, 0)

        def LPAREN(self):
            return self.getToken(LuminaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(LuminaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(LuminaParser.RPAREN, 0)

        def PLUS(self):
            return self.getToken(LuminaParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(LuminaParser.MINUS, 0)

        def getRuleIndex(self):
            return LuminaParser.RULE_fator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFator" ):
                listener.enterFator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFator" ):
                listener.exitFator(self)




    def fator(self):

        localctx = LuminaParser.FatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14 or _la==15:
                self.state = 108
                _la = self._input.LA(1)
                if not(_la==14 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 111
                self.match(LuminaParser.NUMBER)
                pass
            elif token in [12]:
                self.state = 112
                self.match(LuminaParser.ID)
                pass
            elif token in [27]:
                self.state = 113
                self.match(LuminaParser.LPAREN)
                self.state = 114
                self.expr()
                self.state = 115
                self.match(LuminaParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(LuminaParser.TipoContext,0)


        def ID(self):
            return self.getToken(LuminaParser.ID, 0)

        def SEMI(self):
            return self.getToken(LuminaParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(LuminaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(LuminaParser.ExprContext,0)


        def getRuleIndex(self):
            return LuminaParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = LuminaParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.tipo()
            self.state = 120
            self.match(LuminaParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 121
                self.match(LuminaParser.ASSIGN)
                self.state = 122
                self.expr()


            self.state = 125
            self.match(LuminaParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(LuminaParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(LuminaParser.FLOAT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(LuminaParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return LuminaParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LuminaParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LuminaParser.IF, 0)

        def LPAREN(self):
            return self.getToken(LuminaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(LuminaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(LuminaParser.RPAREN, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuminaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuminaParser.StatContext,i)


        def ELSE(self):
            return self.getToken(LuminaParser.ELSE, 0)

        def getRuleIndex(self):
            return LuminaParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)




    def ifStat(self):

        localctx = LuminaParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ifStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(LuminaParser.IF)
            self.state = 130
            self.match(LuminaParser.LPAREN)
            self.state = 131
            self.expr()
            self.state = 132
            self.match(LuminaParser.RPAREN)
            self.state = 133
            self.stat()
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 134
                self.match(LuminaParser.ELSE)
                self.state = 135
                self.stat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(LuminaParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(LuminaParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(LuminaParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(LuminaParser.RPAREN, 0)

        def stat(self):
            return self.getTypedRuleContext(LuminaParser.StatContext,0)


        def getRuleIndex(self):
            return LuminaParser.RULE_whileStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)




    def whileStat(self):

        localctx = LuminaParser.WhileStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whileStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(LuminaParser.WHILE)
            self.state = 139
            self.match(LuminaParser.LPAREN)
            self.state = 140
            self.expr()
            self.state = 141
            self.match(LuminaParser.RPAREN)
            self.state = 142
            self.stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(LuminaParser.FOR, 0)
